# MEF_STRUCTURE

./: .gitignore  .pre-commit-config.yaml  ATLAS_BACKEND_BRIEFING.md  ATLAS_MANIFESTO.md  DOCUMENTATION.md  Makefile  RADIER_NEXT_STEPS.md  README_DEV.md  SESSION_CONTINUATION.md  docker-compose.yml  mef_guardian.py  pyproject.toml  verify_phase3_dynamics.py
curso WL/: Arquitetura - Curso TQS.dwg  PLANTAS PLOTADAS.rar
docs/: ACADEMIC_RADIER_REFERENCES.md  ACCURACY_AND_FIDELITY_REPORT.md  ALTERACOES_EFETIVAS_2026-05-18.md  ANTIGRAVITY_INSTRUCOES_PROXIMA_RODADA.md  CLEANUP_2025_06_13.md  GEO5_BENCHMARK.md  LIBRARY_SUMMARY.md  MARKET_COMPARISON.md  MEF_STRUCTURAL_FUTURE_ROADMAP.md  MEF_STRUCTURAL_ROADMAP_V2.md  MESTRE_FRONTEND_CONTINUIDADE.md  MESTRE_FRONTEND_MELHORIAS_ANTIGRAVITY.md  MESTRE_RESPONSE_CONTRACT.md  STRATEGIC_ROADMAP.md  VALIDATION_MATRIX.md  VIGA_CROSS_REVISAO_NUMERICA.md
mef_dashboard/: .gitignore  README.md  atualizaçoes do projeto.md  package-lock.json  package.json
mef_engine/: .dockerignore  .gitignore  API_SAMPLES.md  BRIEFING_RETOMADA.md  BRIEFING_RETOMADA_VENTO_ESTABILIDADE.md  Dockerfile  README.md  TECHNICAL_REFERENCE.md  VALIDATION_MATRIX.md  academic_pdf.py  ai_copilot.py  api.py  atualizaçoes do projeto.md  autonomous_agent.py  beam_detailing.py  beam_memorial.py  beam_solver.py  bim_engine.py  building_core.py  cache_utils.py  column_detailing.py  column_solver.py  concrete_nonlinear.py  consolidation_engine.py  cost_engine.py  debug_unified.py  distributed_engine.py  durability_checker.py  dxf_engine.py  errors.py  exam_auditor.py  footing_solver.py  frame_engine.py  frame_memorial.py  generate_demo_pdf.py  generate_q47_pdf.py  generate_skyscraper_demo.py  generate_truss_pdf.py  geotechnical_engine.py  jobs.py  (+101 more)
mef_engine/structural_core_rs/: Cargo.toml  pyproject.toml
mef_engine/structural_core_rs/benches/: bench_radier.rs
mef_engine/structural_core_rs/src/: beam_1d.rs  beam_3d.rs  column_fiber.rs  frame_3d.rs  lib.rs  plate_element.rs  radier_winkler.rs  slab_mesh.rs
mef_frontend/: package-lock.json  package.json
reference_results/: pdelta_portico_10_pav.json
tests/: benchmark_pdelta.py  scale_test.py  test_analytical_benchmarks.py  test_api_optimize.py  test_mestre_routing.py  (+2 more)
tests-e2e/: package-lock.json  package.json  playwright.config.ts
(+332 files in other folders)
