[package]
name = "structural_core_rs"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "structural_core_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
faer = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
