[package]
name = "structural_core_rs"
version = "0.2.0"
edition = "2021"

[lib]
name = "structural_core_rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nalgebra = "0.32"
rayon = "1.8"
faer = "0.18"
faer-sparse = "0.17"
anyhow = "1.0"
numpy = "0.21"
blas-src = { version = "0.9", features = ["accelerate"] }
